# C_CPP_homework

./: README.md
homework1/: CMakeLists.txt
homework1/src/: films.c  films.h  main.c
park/CPP_homework_2-hw-2/: README.md
tests/: films_test.cpp
